mods/arcade/web/css/arcade-base.css
:root{
	--saito-width: 1500px;
}

.arcade-container.saito-container{
	grid-template-columns: auto 30rem;
	grid-template-rows: minmax(5px, 1fr);
	padding: 0 calc((100vw - var(--saito-width)) / 2);
	padding-left: calc((100vw - var(--saito-width)) / 4);
	overflow: hidden;
}

/* Filter buttons */
.arcade-game-filter-list{
	display: flex;
	width: 100%;
	align-items: center;
	justify-content: flex-end;
	gap: 1rem;
	position: relative;
}

.game-filter-item{
	padding: 1rem;
	border-radius: 1rem;
	border: 1px solid;
	cursor: pointer;
}

/* right sidebar*/ 
.saito-sidebar.right{
	grid-column: unset;
	grid-row: unset;
}


/* main panel */ 
.arcade-main {
	position: relative;
	padding: 1rem;
	height: 100%;
}

.arcade-scrollable-panel-container{
	height: 100%;
}

.arcade-initializer {
	text-align: center;
	min-width: 18rem; /*Width of the button*/
	display: flex;
	flex-direction: column;
}

.arcade-main .arcade-initializer {
	height: calc(100vh - var(--saito-header-height) - 3rem);
	padding-top: 5rem;
	gap: 5rem;

}

.arcade-game-initializer-success-title {
	text-align: center;
	font-size: 3rem;
	margin: 10rem auto 5rem;
}

.arcade-game-initializer-success-button {
	margin: 3rem auto;
}

.arcade-central-panel{
	height: 100%;
	position: relative;
	display: grid;
	grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
	grid-gap: 1rem;
}


.arcade-sidebar .saito-announcement {
	margin-bottom: 1rem;
	line-height: 1.25em;
}


/******************************************
 *  OVER WRITE Game Selector Overlay code
 *****************************************/
.arcade-central-panel .arcade-game-selector-game{
	box-shadow: 0px 2px 4px var(--saito-bubble-shadow);
	border-radius: 0.5rem;
}

.arcade-game-selector-game-image img{
	border-radius: 0.5rem;
}

.arcade-central-panel .arcade-game-selector-game-title{
	height: 5rem;
	display: flex;
	align-items: center;
	justify-content: space-between;
	padding: 0 1.5rem;
	border-radius: 0.5rem 0.5rem 0 0;
}

.arcade-central-panel .arcade-game-selector-game-title span{
	font-size: 2.4rem;
	text-transform: unset;
	overflow: hidden;
	white-space: nowrap;
	text-overflow: ellipsis;
	flex: 1;
}

.game-selector-card-buttons {
	position: absolute;
	bottom: 0;
	width: 100%;
	height: 5rem;
	display: flex;
	align-items: center;
	justify-content: space-around;
}

.game-selector-card-buttons .saito-button-primary {
	min-width: 5rem;
}

.arcade-central-panel .arcade-game-selector-game:hover{
	transform: none;
	border-color: var(--saito-font-color-heavy);
}

/*************************************
 * Override saito-page-layout 
 * to make arcade better on mobile
**************************************/

@media screen and (max-width: 900px) {
	.saito-container.arcade-container{
		grid-template-columns: 1fr;
		grid-template-rows: repeat(auto-fit, minmax(0px, min-content));
	}

	.arcade-container .saito-sidebar.right {
		display: block;
		visibility: visible;
		position: unset;
		grid-row: unset;
		grid-column-start: unset;
		padding: 1rem;
	}
	.arcade-container .saito-main {
		margin: 0;
		order: 2;
	}
	.arcade-container .saito-sidebar.right .saito-table-row {
		padding: 1rem;
	}
	.arcade-container .saito-sidebar.right .saito-table-body {
		grid-gap: 0.8rem;
		font-size: 1.6rem;
	}

	.arcade-container .saito-sidebar.right .game-slider, 
	.arcade-container .saito-sidebar.right .chat-manager{
		display: none;
	}

	.arcade-central-panel {
		grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
	}

	.arcade-sidebar .saito-announcement {
		display: none;
	}

}

@media screen and (max-width: 600px) {

	.arcade-main {
		padding: 0.5rem;
	}

	.arcade-central-panel {
		grid-template-columns: repeat(auto-fit, minmax(145px, 1fr));
		grid-gap: 0.5rem;
	}

	.arcade-central-panel .arcade-game-selector-game-title span {
		font-size: 1.8rem;
	}
}


/************ DEPRECATED ***************/
.arcade-game-list-container {
	max-height: 60%;
	position: relative;
}

.arcade-menu {
	max-height: calc(100% - 4rem);

}

/**************************
 * Fancy scrolling
**************************/

#top-of-game-list{
	position: absolute;
	top: 5rem;
}

#bottom-of-game-list{
	position: relative;
	bottom: 0;
}



.can-scroll-down::before {
  font-family: FontAwesome;
  content: "";
  font-size: 4rem;
  color: var(--border-color-general-dividers-dark);
	position: absolute;
	bottom: 0;
	left: 0;
	width: 100%;
	text-align: center;
  line-height: 10rem;
	height: 10rem;
	text-shadow: -3px -2px 2px var(--border-color-general-dividers), 0px 2px 2px var(--border-color-general-dividers), 3px -2px 2px var(--border-color-general-dividers);
	z-index: 5;
	pointer-events: none;
    background: linear-gradient(180deg, transparent, var(--saito-background-color) 80%);
} 

.can-scroll-down:hover::before {
  content: "\f0d7";
}

/*  "\f0d8"  */
.can-scroll-up::after {
  font-family: FontAwesome;
  content: "";
  font-size: 4rem;
  color: var(--border-color-general-dividers-dark);
	position: absolute;
	top: 0;
	left: 0;
	width: 100%;
	text-align: center;
  line-height: 10rem;
	height: 10rem;
	text-shadow: -3px 2px 2px var(--border-color-general-dividers), 0px -2px 2px var(--border-color-general-dividers), 3px 2px 2px var(--border-color-general-dividers);
	z-index: 5;
	pointer-events: none;
    background: linear-gradient(0deg, transparent, var(--saito-background-color) 80%);
} 

.can-scroll-up:hover::after {
  content: "\f0d8";
}

